tests/codegen/compile/runtime/fail/invalid_theory_attr.stderr
error: Second theory attribute is supplied.
 --> $DIR/invalid_theory_attr.rs:7:1
  |
7 | #[theory]
  | ^^^^^^^^^
  |
help: Consider adding theory to the following arguments:
 --> $DIR/invalid_theory_attr.rs:6:1
  |
6 | #[runtime::test(async_std)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
